--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,14 +3,14 @@
 <%= form_for Item.new do |f| %>
   <p>
     <%= f.text_field :name %>
-    <%= f.submit "Add" %>
+    <%= f.submit "Add Item" %>
   </p>
 <% end %>
 
-<div id="items">
-  <ol>
-    <% for item in @items %>
-      <li><%= item.name %></li>
-    <% end %>
-  </ol>
-</div>
+<script type="text/html" id="item_template">
+  <li>${item.name}</li>
+</script>
+
+<ol id="items">
+  <li><em>Loading items...</em></li>
+</ol>
